mpfr_v_utils.h

inline static int get_retval (void) {
    return mpfr_ternary_retval;
}
inline static void set_retval (int retval) {
    mpfr_ternary_retval = retval;
}